--- a/site.html
+++ b/site.html
@@ -1209,10 +1209,10 @@
             <a href="https://github.com/sai14367" class="social-link" target="_blank">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="https://linkedin.com" class="social-link" target="_blank">
+            <a href="https://www.linkedin.com/in/venkata-sai-kumar-masanam-56458a27b/" class="social-link" target="_blank">
                 <i class="fab fa-linkedin"></i>
             </a>
-            <a href="mailto:masanamvenkatasaikumar@gmail.com" class="social-link">
+            <a href="masanamvenkatasaikumar@gmail.com" class="social-link">
                 <i class="fas fa-envelope"></i>
             </a>
         </div>
@@ -1423,4 +1423,5 @@
         });
     </script>
 </body>
+
 </html>
